Restaurent registration, sign In, AUthentication using token done

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "This prpject contains backend apis of Restaurent Management System",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "install": "^0.13.0"
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.2",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9"
   }
 }
