--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "backend": "file:",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
