--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,7 @@
+# Node.js dependencies
+node_modules/
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,17 +9,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variables
 .env
-node_modules
-dist
-dist-ssr
-*.local
+
+# Build directories
+dist/
+dist-ssr/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+
+# Windows and Visual Studio
 *.suo
 *.ntvs*
 *.njsproj
